Move things into single recipe for now.
Add nginx.

--- a/templates/default/settings.py.erb
+++ b/templates/default/settings.py.erb
@@ -2,7 +2,7 @@ from ganeti_web.settings import *
 
 import os.path
 
-DEBUG = True
+DEBUG = <%= @debug ? "True" : "False" %>
 TEMPLATE_DEBUG = DEBUG
 
 TESTING = False
@@ -18,19 +18,13 @@ MANAGERS = ADMINS
 
 DATABASES = {
     'default': {
-        # Add 'postgresql_psycopg2', 'postgresql', 'mysql',
-        # 'sqlite3' or 'oracle'.
-        'ENGINE': 'django.db.backends.sqlite3',
-
-        # Or path to database file if using sqlite3.
-        'NAME': 'ganeti.db',
-        'USER': '',      # Not used with sqlite3.
-        'PASSWORD': '',  # Not used with sqlite3.
-        'HOST': '',      # Set to empty string for localhost.
-                         # Not used with sqlite3.
-        'PORT': '',      # Set to empty string for default.
-                         #Not used with sqlite3.
-    }
+        'NAME': '<%= @database[:settings][:database] %>',
+        'ENGINE': 'django.db.backends.<%= @database[:settings][:engine] %>',
+        'USER': '<%= @database[:settings][:username] %>',
+        'PASSWORD': '<%= @database[:settings][:password] %>',
+        'HOST': '<%= @database[:host] %>',
+        'PORT': '<%= @database[:settings][:port]  %>',
+    },
 }
 LANGUAGE_CODE = 'en-US'
 
