--- a/templates/default/settings.py.erb
+++ b/templates/default/settings.py.erb
@@ -126,7 +126,7 @@ LAZY_CACHE_REFRESH = 600000
 #   Internal Ports: 12000+ must be open between the Proxy and Ganeti Nodes
 #   External Ports: default is 7000-8000, must be open between Proxy and Client
 #   Flash Policy Server: 843, must open between Proxy and Clients
-VNC_PROXY = "<%= @auth_proxy[:fqdn] %>:<%= @auth_proxy[:port] %>"
+VNC_PROXY = "<%= @auth_proxy[:host] %>:<%= @auth_proxy[:port] %>"
 
 # PyCurls default TIMEOUT in 7.21.6 defaults to 13 and CONNECTTIMEOUT to 78.
 # This is way too long to wait for incorrect or unresponsive ganeti clusters
