Update config template with lowercase language code

--- a/templates/default/config.yml.erb
+++ b/templates/default/config.yml.erb
@@ -28,7 +28,7 @@ DATETIME_FORMAT: "d/m/Y H:i"
 
 # Language code for this installation. All choices can be found here:
 # http://www.i18nguy.com/unicode/language-identifiers.html
-LANGUAGE_CODE: "en-US"
+LANGUAGE_CODE: "en-us"
 ##### End Locale Configuration #####
 
 # Enable i18n (translations) and l10n (locales, currency, times).
