Quote site_domain setting in config.yml. Also fix erb tag.

--- a/templates/default/config.yml.erb
+++ b/templates/default/config.yml.erb
@@ -19,7 +19,7 @@ DEBUG: <%= @app['debug'] %>
 # Site name and domain referenced by some modules to provide links back to
 #  the site.
 SITE_NAME: Ganeti Web Manager
-SITE_DOMAIN: <% @app['site_domain'] %>
+SITE_DOMAIN: "<%= @app['site_domain'] %>"
 
 # http://en.wikipedia.org/wiki/List_of_tz_zones_by_name
 TIME_ZONE: America/Los_Angeles
