Use install_dir attribute
Use the install_dir attribute in flashpolicy and vncauthproxy service
commands. Also add runit to the Berksfile

--- a/templates/default/sv-flashpolicy-run.erb
+++ b/templates/default/sv-flashpolicy-run.erb
@@ -1,2 +1,2 @@
 #!/bin/sh
-exec /opt/ganeti_webmgr/bin/twistd --nodaemon flashpolicy
+exec <%= @options['install_dir'] %>/bin/twistd --nodaemon flashpolicy
