Remove unnecessary code and Rubyify

--- a/templates/default/sv-flashpolicy-run.erb
+++ b/templates/default/sv-flashpolicy-run.erb
@@ -1,2 +1,2 @@
 #!/bin/sh
-exec <%= @options['install_dir'] %>/bin/twistd --nodaemon flashpolicy
+exec <%= ::File.join(@options['install_dir'], "/bin/twistd") %> --nodaemon flashpolicy
