--- a/templates/default/sv-vncauthproxy-run.erb
+++ b/templates/default/sv-vncauthproxy-run.erb
@@ -1,2 +1,2 @@
 #!/bin/sh
-exec <%= @options['install_dir'] %>/bin/twistd --nodaemon vncap -c tcp:<%= @options['port'] %>:interface=<%= @options['ip'] %>
+exec <%= ::File.join(@options['install_dir'], "/bin/twistd") %> --nodaemon vncap -c tcp:<%= @options['port'] %>:interface=<%= @options['ip'] %>
